--- a/src/index.scss
+++ b/src/index.scss
@@ -1,24 +1,23 @@
 ::-webkit-scrollbar {
-    width: 20px;
+  width: 20px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: hsl(0, 0%, 20%);
-    border-radius: 100vw;
-    border: .35em solid white;
+  background: hsl(0, 0%, 20%);
+  border-radius: 100vw;
+  border: 0.35em solid white;
 }
 
 body {
-    font-family: 'open sans';
-    padding: 20px 40px;
-    overflow: overlay;
+  font-family: "open sans"; 
+  padding: 20px 40px;
+  overflow: overlay;
 
-    @media screen and (max-width: 500px) {
-        padding: 0;
-    }
-    a {
-        text-decoration: none;
-        color: black;
-    }
+  @media screen and (max-width: 500px) {
+    padding: 0;
+  }
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
-
